fixed navbar text still clickable while off screen

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,8 @@ nav {
   z-index: 1;
   background-color: #f0edee;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: end;
+  gap: 55px;
   align-items: center;
   font-weight: bold;
 }
@@ -40,6 +41,11 @@ nav p {
 .tab {
   transform: translate(-425px, 0);
   opacity: 1;
+}
+
+nav svg {
+  position: absolute;
+  left: 60px;
 }
 
 svg.active #line1 {
@@ -78,10 +84,12 @@ svg:not(.active) #line3 {
   from {
     transform: translate(-425px, 0);
     opacity: 0;
+    display: none;
   }
   to {
     transform: translate(0, 0);
     opacity: 1;
+    display: block;
   }
 }
 
@@ -89,10 +97,12 @@ svg:not(.active) #line3 {
   from {
     transform: translate(0, 0);
     opacity: 1;
+    display: block;
   }
   to {
     transform: translate(-425px, 0);
     opacity: 0;
+    display: none;
   }
 }
 
